--- a/src/app/pages/documented-information/components/modal-edit-docs/modal-edit-docs.component.html
+++ b/src/app/pages/documented-information/components/modal-edit-docs/modal-edit-docs.component.html
@@ -17,7 +17,7 @@
 
 <div class="body-mut">
   <div class="frame" *ngFor="let tree of trees;let i = index">
-    <input type="text" class="inpt-frame" [value]="i + '.' + ' ' + tree.name" [readonly]="true" 
+    <input type="text" class="inpt-frame" [value]="tree.name" [readonly]="true" 
            [id]="'node'+i" (keyup.enter)="confirmUpdate(i)" (click)="clickInpt($event)">
     <div class="cont-icons">
       <img src="assets/images/play-ic.png" alt="icono play" (click)="goSubnivel(tree)" [ngClass]="{'active-children': tree?.children?.length}">
