--- a/src/app/pages/administration/components/types/modal-type/modal-type.component.html
+++ b/src/app/pages/administration/components/types/modal-type/modal-type.component.html
@@ -7,7 +7,7 @@
 
     <mat-form-field appearance="outline">
         <mat-label>Descripción</mat-label>
-        <input matInput placeholder="Placeholder" formControlName="description">
+        <input matInput placeholder="Placeholder" formControlName="name">
     </mat-form-field>
 
     <div class="container-btn-save">
