--- a/src/app/pages/administration/components/states/states.component.html
+++ b/src/app/pages/administration/components/states/states.component.html
@@ -17,6 +17,16 @@
                 </td>
             </ng-container>
 
+            <ng-container matColumnDef="actions">
+                <th mat-header-cell *matHeaderCellDef>  </th>
+                <td mat-cell *matCellDef="let element"> 
+                    <div style="text-align: center;">
+                        <img src="assets/images/trash-ic.png" alt="icono eliminar" (click)="delete(element)">
+                    </div> 
+                </td>
+            </ng-container>
+            
+
             <ng-container matColumnDef="noResults">
                 <td mat-footer-row *matFooterCellDef [colSpan]="displayedColumns.length">
                     No se encontraron resultados.
