--- a/src/app/pages/administration/components/types/types.component.html
+++ b/src/app/pages/administration/components/types/types.component.html
@@ -12,8 +12,17 @@
             <ng-container matColumnDef="description">
                 <th mat-header-cell *matHeaderCellDef> Descripción </th>
                 <td mat-cell *matCellDef="let element;let i = index"> 
-                    <div *ngIf="indexSelectedRow !== i">{{element.description}}</div> 
-                    <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="description">
+                    <div *ngIf="indexSelectedRow !== i">{{element.name}}</div> 
+                    <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="name">
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="actions">
+                <th mat-header-cell *matHeaderCellDef>  </th>
+                <td mat-cell *matCellDef="let element"> 
+                    <div style="text-align: center;">
+                        <img src="assets/images/trash-ic.png" alt="icono eliminar" (click)="delete(element)">
+                    </div> 
                 </td>
             </ng-container>
 
